Start of deep refactor.

--- a/templates/default/tmpl/index.html
+++ b/templates/default/tmpl/index.html
@@ -3,39 +3,19 @@
 <head>
 	<meta charset="utf-8">
 	<title>JSDoc Index</title>
-	
-	<script type="text/javascript">
-		route = function() {
-			var url, q = location.search.slice(1);			
-			if ( /^doc=(.+)/.test(q) ) {
-				q = decodeURIComponent(RegExp.$1);
-				if ( (url = route.resolve(q)) ) { window.location = url; }
-			}
-		}
-		
-		route.resolve = function(q) {
-			if ( route.map.hasOwnProperty(q) ) { return route.map[q]; }
-		}
-		
-		route.map = {
-			/* docpath => url */
-		}
-		
-		route();
-	</script>
 </head>
 
 <body>
 
 <h1>All Symbols</h1>
 
-<% if (doc.length) { %>
 <ul>
-	<% for ( var i = 0; i < doc.length; i++ ) { %>
-	<li class="symbol"><i>{<%= doc[i].kind %>}</i> <%= doc[i].path %> - <%= tmpl.summarize(doc[i].desc) %></li>
-	<% } %>
+{{#docs}}
+    <li class="symbol">
+        <i>{{kind}}</i> {{name}}{{#description}} - {{#summarize}}{{description}}{{/summarize}}{{/description}}
+    </li>
+{{/docs}}
 </ul>
-<% } %>
 
 </body>
 </html>
