--- a/templates/default/tmpl/index.html
+++ b/templates/default/tmpl/index.html
@@ -12,7 +12,7 @@
 <ul>
 {{#docs}}
     <li class="symbol">
-        <i>{{kind}}</i> {{name}}{{#description}} - {{#summarize}}{{{description}}}{{/summarize}}{{/description}}
+        <i>{{kind}}</i> {{longname}}{{#description}} - {{#summarize}}{{{description}}}{{/summarize}}{{/description}}
     </li>
 {{/docs}}
 </ul>
