Added taffydb, tweaked mustachejs to define a "last?" value in loops (true on the last item), added use of last? into templates.

--- a/templates/default/tmpl/param.mustache
+++ b/templates/default/tmpl/param.mustache
@@ -1,6 +1,8 @@
 <li>
     {{#type}}
-    { {{#names}}<span class="param-type">{{#linkify}}{{.}}{{/linkify}}</span> {{/names}} }
+    {
+        {{#names}}<span class="param-type">{{last}}{{#linkTo}}{{.}}{{/linkTo}}</span>{{^last?}} | {{/last?}}{{#last?}} {{/last?}}{{/names}}
+    }
     {{/type}}
     <span class="param-name">{{name}}</span>
 </li>
