--- a/templates/default/tmpl/index.mustache
+++ b/templates/default/tmpl/index.mustache
@@ -66,7 +66,7 @@
             {{#hasBorrowed}}
             <h3>Mixes In:</h3>
             <ol class="borrows detail-list">
-                {{#borrowed}} <li>{{#linkify}}{{from}}{{/linkify}}</li> {{/borrowed}}
+                {{#borrowed}} <li>{{#linkTo}}{{from}}{{/linkTo}}</li> {{/borrowed}}
             </ol>
             {{/hasBorrowed}}
             
