--- a/templates/default/tmpl/param.mustache
+++ b/templates/default/tmpl/param.mustache
@@ -1,8 +1,19 @@
-<li>
-    {{#type}}
-    {
-        {{#names}}<span class="param-type">{{last}}{{#linkTo}}{{.}}{{/linkTo}}</span>{{^last?}} | {{/last?}}{{#last?}} {{/last?}}{{/names}}
-    }
-    {{/type}}
-    <span class="param-name">{{name}}</span>
-</li>
+<dt{{#first?}} class="first"{{/first?}}><span class="param-name">{{name}}</span></dt>
+<dd>
+    <dl class="param-properties">
+        {{#type}}
+        <dt><span>Type</span></dt>
+        <dd>{{#names}}<span class="param-type">{{#linkTo}}{{.}}{{/linkTo}}</span>{{^last?}} | {{/last?}}{{#last?}} {{/last?}}{{/names}}</dd>
+        {{/type}}
+        {{#defaultvalue}}
+        <dt><span>Default</span></dt>
+        <dd>{{defaultvalue}}</dd>
+        {{/defaultvalue}}
+        {{#optional}}
+        <dt><span>Optional</span></dt>
+        <dd class="optionalDef">Yes</dd>
+        {{/optional}}
+    </dl>
+    
+    <div class="param-desc">{{description}}</div>
+</dd>
