--- a/templates/default/tmpl/params.mustache
+++ b/templates/default/tmpl/params.mustache
@@ -2,7 +2,7 @@
     {{#params}}  
 
     <dt{{#first?}} class="first"{{/first?}}>
-        <span class="param-name">{{name}}</span>
+        <h6>{{name}}</h6>
     </dt>
     
     <dd>
