Added support for @project and @license tags. Better support for this-variables in a @constructs scope. Name property no does not have namespace applied, only longname does.

--- a/templates/default/tmpl/container.mustache
+++ b/templates/default/tmpl/container.mustache
@@ -168,7 +168,7 @@
     <h1>{{title}}</h1>
 
 {{#docs}}
-    <h2 class="symbol-head" id="{{longname}}">{{displayName}}</h2>
+    <h2 class="symbol-head" id="{{longname}}">{{name}}</h2>
     
     {{#hasMethods}}
         <h3>Methods</h3>
