Added exceptions to template. Improved name/longname resolution: namespace now is only applied to longname when using the @alias tag, names that are fully quoted strings no longer have incorrect shortening.

--- a/templates/default/tmpl/methods.mustache
+++ b/templates/default/tmpl/methods.mustache
@@ -16,6 +16,11 @@
                 {{>paramsTemplate}}
             {{/hasParams}}
             
+            {{#hasExceptions}}
+                <h5>Throws:</h5>
+                {{>exceptionsTemplate}}
+            {{/hasExceptions}}
+            
             {{#hasReturns}}
                 <h5>Returns:</h5>
                 {{>returnsTemplate}}
