--- a/templates/default/tmpl/methods.mustache
+++ b/templates/default/tmpl/methods.mustache
@@ -1,7 +1,6 @@
-<dl class="methods">
-{{#methods}}
+
     <dt class="furtherDetailHeading" id="method:{{name}}">
-        <h4>{{name}}</h4>
+        <h4 class="method-title">{{name}}</h4>
     </dt>
     <dd>
         {{#summary}}<p class="shortDesc">{{{summary}}}</p>{{/summary}}
@@ -27,5 +26,4 @@
             {{/hasReturns}}
         </div>
     </dd>
-{{/methods}}
-</dl>
+
