--- a/templates/default/tmpl/index.mustache
+++ b/templates/default/tmpl/index.mustache
@@ -16,149 +16,127 @@
         .function { color: #666; }
         
         .access { color: #666; }
-/*        
-        .symbol-head
-        {
-        	margin-top: 8px;
-        	margin-bottom: 4px;
-        	padding: 6px;
-        	font-size: 110%;
-        	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Tahoma, sans-serif;
-        	background-color: #B8B9CB;
+
+        .detail-list {
+            list-style-type:none;
+        }
+            
+        html {
+            /* stops IE resizing fonts by a massive amount */
+            font-size: 100%
+        }
+        body {
+            /* pixes monospace font sizes in webkit */
+            font-size: 10px;
+            /* following line is picked up by IE6 & 7, which cannot resize pixel-based font sizes */
+            *font-size: 62.5%;
         }
         
+        body {
+            font-size: 0.8em;
+            font-family: verdana, sans-serif;
+            /*overflow: hidden;*/
+            zoom: 1;
+            /*background: url(images/pagebg.png) 0 73px repeat-x;*/
+            color: #333333;
+        }
+        a:link, a:visited {
+            color: #356a8b;
+            text-decoration: none;
+            border-bottom: 1px dotted #356a8b;
+        }
+        a:hover, a:active {
+            color: #298FB2;
+            border-color: #298FB2;
+            border-bottom-style: solid;
+        }
+        a.image {
+            border: 0;
+        }
+        h1 {
+            font-size: 2em;
+            font-family: arial, sans-serif;
+        }
+        h2 {
+            font-size: 1.7em;
+            margin: 0 0 1em 0;
+            font-family: arial, sans-serif;
+        }
+        h3 {
+            font-size: 1.4em;
+            margin: 0.4em 0;
+            font-family: arial, sans-serif;
+            color: #4e4e4e;
+        }
+        h4 {
+            margin: 1em 0;
+            color: #298FB2;
+        }
+        h5 {
+            margin: 1em 0;
+        }
+        p {
+            margin: 0 0 1em 0;
+            line-height: 1.5;
+        }
+            
+        dl.params dt {
+            border-top: 1px solid #b2b1b1;
+            color: #298FB2;
+            font-weight: bold;
+            padding-top: 8px;
+            margin-bottom: 5px;
+            font-size: 1.1em;
+            float: none;
+            overflow: visible;
+            zoom: 0;
+        }
         
+        dl.params dt.first {
+            border-top: none;
+            padding-top: 0;
+            margin-top: 0;
+        }
         
-        .symbol-head .summary {
+        dl.params dd {
+            border-width: 0;
+            margin-bottom: 16px;
+        }
+        
+        dl.param-properties {
             font-style: italic;
-            color: #fff;
-            font-size: 90%;
+            overflow: hidden;
+            zoom: 1;
+            font-size: 0.9em;
+            margin: 1em 0;
         }
-        .description {
-            margin-top: 12px;
+        dl.param-properties dt span,
+        dl.param-properties dd {
+            color: #555;
+            float: left;
+            margin: 0;
+            padding: 0;
+            display: inline;
+            margin-bottom: 5px;
+            font-size: 1em;
+            border: none;
         }
-        
- */       
-    
-    
-    .detail-list {
-        list-style-type:none;
-    }
-        
-    html {
-        /* stops IE resizing fonts by a massive amount */
-        font-size: 100%
-    }
-    body {
-        /* pixes monospace font sizes in webkit */
-        font-size: 10px;
-        /* following line is picked up by IE6 & 7, which cannot resize pixel-based font sizes */
-        *font-size: 62.5%;
-    }
-    
-    body {
-        font-size: 0.8em;
-        font-family: verdana, sans-serif;
-        /*overflow: hidden;*/
-        zoom: 1;
-        /*background: url(images/pagebg.png) 0 73px repeat-x;*/
-        color: #333333;
-    }
-    a:link, a:visited {
-        color: #356a8b;
-        text-decoration: none;
-        border-bottom: 1px dotted #356a8b;
-    }
-    a:hover, a:active {
-        color: #298FB2;
-        border-color: #298FB2;
-        border-bottom-style: solid;
-    }
-    a.image {
-        border: 0;
-    }
-    h1 {
-        font-size: 2em;
-        font-family: arial, sans-serif;
-    }
-    h2 {
-        font-size: 1.7em;
-        margin: 0 0 1em 0;
-        font-family: arial, sans-serif;
-    }
-    h3 {
-        font-size: 1.4em;
-        margin: 0.4em 0;
-        font-family: arial, sans-serif;
-        color: #4e4e4e;
-    }
-    h4 {
-        margin: 1em 0;
-        color: #298FB2;
-    }
-    h5 {
-        margin: 1em 0;
-    }
-    p {
-        margin: 0 0 1em 0;
-        line-height: 1.5;
-    }
-        
-    dl.params dt {
-        border-top: 1px solid #b2b1b1;
-        color: #298FB2;
-        font-weight: bold;
-        padding-top: 8px;
-        margin-bottom: 5px;
-        font-size: 1.1em;
-        float: none;
-        overflow: visible;
-        zoom: 0;
-    }
-    
-    dl.params dt.first {
-        border-top: none;
-    }
-    
-    dl.params dd {
-        border-width: 0;
-        margin-bottom: 16px;
-    }
-    
-    dl.param-properties {
-        font-style: italic;
-        overflow: hidden;
-        zoom: 1;
-        font-size: 0.9em;
-        margin: 1em 0;
-    }
-    dl.param-properties dt span,
-    dl.param-properties dd {
-        color: #555;
-        float: left;
-        margin: 0;
-        padding: 0;
-        display: inline;
-        margin-bottom: 5px;
-        font-size: 1em;
-        border: none;
-    }
-    dl.param-properties dt {
-        clear: both;
-        display: inline;
-        font-size: 1em;
-        padding: 0;
-        float: none;
-        overflow: visible;
-        zoom: 0;
-    }
-    dl.param-properties dt span {
-        width: 85px;
-        clear: both;
-    }
-    dl.param-properties dd.yesDef {
-        text-indent: -5000px;
-    }
+        dl.param-properties dt {
+            clear: both;
+            display: inline;
+            font-size: 1em;
+            padding: 0;
+            float: none;
+            overflow: visible;
+            zoom: 0;
+        }
+        dl.param-properties dt span {
+            width: 85px;
+            clear: both;
+        }
+        dl.param-properties dd.yesDef {
+            text-indent: -5000px;
+        }
         
     </style>
 </head>
