Fixes to the display of @example in th edefault template.

--- a/templates/default/tmpl/container.mustache
+++ b/templates/default/tmpl/container.mustache
@@ -182,16 +182,58 @@
         width: 85px;
         clear: both;
     }
-    dl.param-properties dd.yesDef {
-        text-indent: -5000px;
-    }
     
-    .no-docs
-    {
+    
+    .no-docs {
     	font-style: italic;
     	font-weight: lighter;
     	color: #666;
     }
+    
+    .property {
+        margin-left: 30px;
+    }
+    .property-head {
+        margin-left: -30px;
+        display: block;
+        line-height: 1.2em;
+    }
+    .property-head h4 {
+        color: #4782B5;
+    }
+    .property-title {
+    	float: left;
+    	margin: 0;
+    	padding: 0 20px 0 0;
+    	font-style: italic;
+    	font-size: 1.2em;
+    }
+    .property-summary {
+        color: #999;
+        font-size: 1em;
+    }
+    .property-details {
+        clear: both;
+        overflow: hidden;
+    }
+    .property-details dt {
+        font-weight: bold;
+        margin-bottom: 4px;
+    }
+    
+    
+    .example-code
+    {
+    	border: 1px solid #999;
+    	padding: 2px 2px 2px 8px;
+    	margin-right: 24px;
+    	background-color: #FFFDE1;
+    }
+    
+    .yesDef {
+        text-indent: -5000px;
+    }
+    
     </style>
 </head>
 
