Update to build script to handle mirroring to svn.
git-svn-id: https://jsdoc.googlecode.com/svn/trunk/@8 d5942f49-e6af-b5c1-9d01-85772c7ca168

--- a/templates/default/tmpl/container.mustache
+++ b/templates/default/tmpl/container.mustache
@@ -222,8 +222,7 @@
     }
     
     
-    .example-code
-    {
+    .example-code {
     	border: 1px solid #999;
     	padding: 2px 2px 2px 8px;
     	margin-right: 24px;
