--- a/templates/default/tmpl/container.mustache
+++ b/templates/default/tmpl/container.mustache
@@ -4,244 +4,13 @@
 <head>
 	<meta charset="utf-8">
 	<title>JSDoc: {{title}}</title>
-	<style type="text/css">
-        .kind { font-style: italic; }
-        .constructor, .mixin, .namespace
-        {
-        	font-weight: bold;
-        	color: #780000;
-        }
-        
-        .property { color: #666; }
-        .function { color: #666; }
-        
-        .access { color: #666; }
-/*        
-        .symbol-head
-        {
-        	margin-top: 8px;
-        	margin-bottom: 4px;
-        	padding: 6px;
-        	font-size: 110%;
-        	font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", Verdana, Tahoma, sans-serif;
-        	background-color: #B8B9CB;
-        }
-        
-        
-        
-        .symbol-head .summary {
-            font-style: italic;
-            color: #fff;
-            font-size: 90%;
-        }
-        .description {
-            margin-top: 12px;
-        }
-        
- */  
-    .page-title
-    {
-    	font-family: "Bitstream Vera Sans", "DejaVu Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans serif;
-    	font-size: 3.5em;
-    	font-weight: bolder;
-    	margin: 0 0 0.1em;
-    	color: #FFF;
-    }
+	
+	<script src="http://shjs.sourceforge.net/sh_main.min.js"> </script>
+    <script src="http://shjs.sourceforge.net/lang/sh_javascript.min.js"> </script>
+    <link type="text/css" rel="stylesheet" href="styles/node-dark.css">
+    <link type="text/css" rel="stylesheet" href="styles/jsdoc-default.css">
     
-    .section-title
-    {
-    	font-size: 2.5em;
-    	margin: 0;
-    	color: #798D3E;
-    }
-    
-    section {
-        border: 1px solid #ccc;
-        border-radius: 15px;
-        -moz-border-radius: 8px;
-        display: block;
-        padding: 0.75em 0.5em 0.5em 1em;
-        margin: 0.5em 0.5em 1em 1em;
-        background-color: #fff;
-        color: #000;
-    }
-    
-    .subsection-title {
-        font-size: 1.9em;
-        margin: 0.5em 0 1em;
-        color: #000;
-    }
-    
-    .method-title, .class-title
-    {
-    	font-size: 1.7em;
-    	margin: 0 0 1em 1em;
-    	color: #7B1A3F;
-    }
-    
-    .detail-list {
-        list-style-type:none;
-    }
-        
-    html {
-        /* stops IE resizing fonts by a massive amount */
-        font-size: 100%
-    }
-    body {
-        font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans serif;
-        /* fixes monospace font sizes in webkit */
-        font-size: 11px;
-        /* following line is picked up by IE6 & 7, which cannot resize pixel-based font sizes */
-        *font-size: 62.5%;
-    }
-    
-    body {
-        font-size: 0.8em;
-        font-family: verdana, sans-serif;
-        /*overflow: hidden;*/
-        zoom: 1;
-        /*background: url(images/pagebg.png) 0 73px repeat-x;*/
-        color: #fff;
-        background-color: #777;
-    }
-    a:link, a:visited {
-        color: #356a8b;
-        text-decoration: none;
-        border-bottom: 1px dotted #356a8b;
-    }
-    a:hover, a:active {
-        color: #298FB2;
-        border-color: #298FB2;
-        border-bottom-style: solid;
-    }
-    a.image {
-        border: 0;
-    }
-   
-    p {
-        margin: 0 0 1em 0;
-        line-height: 1.5;
-    }
-    
-    code {
-        font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace;
-        color: #000;
-    }
-        
-    dl.params dt {
-        border-top: 1px solid #b2b1b1;
-        color: #298FB2;
-        font-weight: bold;
-        padding-top: 8px;
-        margin-bottom: 5px;
-        font-size: 1.1em;
-        float: none;
-        overflow: visible;
-        zoom: 0;
-    }
-    
-     dl.params dt.first {
-        border-top: none;
-        padding-top: 0;
-        margin-top: 0;
-    }
-    
-    dl.params dd {
-        border-width: 0;
-        margin-bottom: 16px;
-    }
-    
-    dl.param-properties {
-        font-style: italic;
-        overflow: hidden;
-        zoom: 1;
-        font-size: 0.9em;
-        margin: 1em 0;
-    }
-    dl.param-properties dt span,
-    dl.param-properties dd {
-        color: #555;
-        float: left;
-        margin: 0;
-        padding: 0;
-        display: inline;
-        margin-bottom: 5px;
-        font-size: 1em;
-        border: none;
-    }
-    dl.param-properties dt {
-        clear: both;
-        display: inline;
-        font-size: 1em;
-        padding: 0;
-        float: none;
-        overflow: visible;
-        zoom: 0;
-    }
-    dl.param-properties dt span {
-        width: 85px;
-        clear: both;
-    }
-    
-    
-    .no-docs {
-    	font-style: italic;
-    	font-weight: lighter;
-    	color: #666;
-    }
-    
-    .property {
-        margin-left: 30px;
-    }
-    .property-head {
-        margin-left: -20px;
-        display: block;
-        line-height: 1.2em;
-    }
-    .property-name {
-    	float: left;
-    	margin: 0;
-    	padding: 0 10px 0 0;
-    	
-        font-style: italic;
-        font-weight: bold;
-    	font-size: 1.2em;
-    	color: #4782B5;
-    }
-    .property-summary {
-        color: #999;
-        font-size: 1em;
-    }
-    .property-details {
-        clear: both;
-        overflow: hidden;
-    }
-    .property-details dt {
-        font-weight: bold;
-        margin-bottom: 4px;
-        padding-left: 10px;
-        clear: left;
-        float: left;
-    }
-    .property-details dd {
-        padding-left: 60px;
-    }
-    .property-deprecated {
-        text-decoration: line-through;
-    }
-    
-    .example-code {
-    	border: 1px solid #999;
-    	padding: 2px 2px 2px 8px;
-    	margin-right: 24px;
-    	background-color: #FFFDE1;
-    }
-    
-    .yesDef {
-        text-indent: -5000px;
-    }
-    
-    </style>
+	
 </head>
 
 <body>
@@ -308,5 +77,6 @@
     </section>
 {{/docs}}
 
+    <script> sh_highlightDocument(); </script>
 </body>
 </html>
